--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -244,17 +244,10 @@
     </form>
 {% endmacro %}
 
-{% macro proposer_etablissement(form, action_url) %}
+{% macro ajouter_etablissement(form, action_url) %}
     <!-- Formulaire d'ajout d'établissement -->
     <form method="POST" action="{{ action_url }}" class="form-container">
         {{ form.hidden_tag() }}
-        <div class="form-group">
-            {{ form.nom.label(class="form-label") }}
-            {{ form.nom(class="form-control") }}
-            {% if form.nom.errors %}
-                <div class="error-message">{{ form.nom.errors[0] }}</div>
-            {% endif %}
-        </div>
         <div class="form-group">
             {{ form.type_etab.label(class="form-label") }}
             {{ form.type_etab(class="form-control") }}
@@ -263,31 +256,63 @@
             {% endif %}
         </div>
         <div class="form-group">
+            {{ form.nom.label(class="form-label") }}
+            {{ form.nom(class="form-control", id="nom") }}
+            {% if form.nom.errors %}
+                <div class="error-message">{{ form.nom.errors[0] }}</div>
+            {% endif %}
+        </div>
+        <div class="form-group">
             {{ form.adresse.label(class="form-label") }}
-            {{ form.adresse(class="form-control") }}
+            {{ form.adresse(class="form-control", id="adresse") }}
             {% if form.adresse.errors %}
                 <div class="error-message">{{ form.adresse.errors[0] }}</div>
             {% endif %}
         </div>
         <div class="form-group">
+            {{ form.code_postal.label(class="form-label") }}
+            {{ form.code_postal(class="form-control", id="code_postal") }}
+            {% if form.code_postal.errors %}
+                <div class="error-message">{{ form.code_postal.errors[0] }}</div>
+            {% endif %}
+        </div>
+        <div class="form-group">
             {{ form.ville.label(class="form-label") }}
-            {{ form.ville(class="form-control") }}
+            {{ form.ville(class="form-control", id="ville") }}
             {% if form.ville.errors %}
                 <div class="error-message">{{ form.ville.errors[0] }}</div>
             {% endif %}
         </div>
         <div class="form-group">
             {{ form.description.label(class="form-label") }}
-            {{ form.description(class="form-control") }}
+            {{ form.description(class="form-control", id="description") }}
             {% if form.description.errors %}
                 <div class="error-message">{{ form.description.errors[0] }}</div>
             {% endif %}
         </div>
         <div class="form-group">
+            {{ form.label.label(class="form-label") }}
+            {{ form.label(class="form-control", id="label") }}
+            {% if form.label.errors %}
+                <div class="error-message">{{ form.label.errors[0] }}</div>
+            {% endif %}
+        </div>
+        <div class="form-group">
+            {{ form.visite.label(class="form-label") }}
+            {{ form.visite(class="form-control", id="visite") }}
+            {% if form.visite.errors %}
+                <div class="error-message">{{ form.visite.errors[0] }}</div>
+            {% endif %}
+        </div>
+        <input type="hidden" id="latitude" name="latitude">
+        <input type="hidden" id="longitude" name="longitude">
+        <div class="form-group">
             {{ form.submit(class="btn btn-proposer") }}
         </div>
     </form>
 {% endmacro %}
+
+
 
 {% macro proposer_evaluation(form, action_url) %}
     <!-- Formulaire d'ajout d'évaluation -->
